# Lampara_Smart

./: .gitignore  CMakeLists.txt  README.md
components/ble_foco/: CMakeLists.txt  ble_foco.c
components/ble_foco/include/: ble_foco.h
components/led_color/: CMakeLists.txt  led_color.c
components/led_color/include/: led_color.h
components/led_controller/: CMakeLists.txt  led_controller.c
components/led_controller/include/: led_controller.h
components/led_modes/: CMakeLists.txt  led_modes.c
components/led_modes/include/: led_modes.h
components/led_strip_encoder/: CMakeLists.txt  led_strip_encoder.c
components/led_white/: CMakeLists.txt  led_white.c
components/led_white/include/: led_white.h
components/ws2812_driver/: CMakeLists.txt  ws2812_driver.c
components/ws2812_driver/include/: ws2812_driver.h
main/: CMakeLists.txt  main.c
